--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CardGameManager"
         tools:targetApi="31">
+
         <activity
             android:name=".features.splash.SplashScreenActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
         </activity>
+
+        <activity
+            android:name=".common.ui.activity.BaseActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
