--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        dataBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -41,4 +43,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // for initializing viewmodels inside activity
+    implementation "androidx.activity:activity-ktx:1.5.0"
+
+    // for showing lotti animations
+    implementation 'com.airbnb.android:lottie:5.2.0'
 }
