Adding base activity & base fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,11 @@
         <activity
             android:name=".features.home.HomeActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".common.ui.activity.BaseActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
