--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
     // for initializing viewmodels inside activity
     implementation "androidx.activity:activity-ktx:1.5.0"
+    implementation "androidx.fragment:fragment-ktx:1.5.0"
 
     // for showing lotti animations
     implementation 'com.airbnb.android:lottie:5.2.0'
