--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".common.ui.activity.BaseActivity"
+            android:name=".common.ui.base.BaseActivity"
             android:exported="true">
 
             <intent-filter>
